Search for given strings as POST request. This enables integration with the UI.
