# controllers/controllers.py
@@ -1,4 +1,4 @@
-from flask import jsonify
+from flask import jsonify, request
 from datetime import datetime as dt
 
 from config.config import cfg
@@ -12,5 +12,13 @@ def ping(username: str, suffix: str=None):
 
     return pong
 
+# Write Python function to tokenize a semicolon separated string
+
 def run(username: str):
     create_output_file(cfg["app"]["input_file_name"], cfg["app"]["output_file_name"], cfg["app"]["headless"])
+
+def run_post(username: str="vatsaaa"):
+    search_strings = request.get_json()["search_string"].split(";")
+    stripped_search_strings = [s.strip() for s in search_strings]
+
+    create_output_file(cfg["app"]["input_file_name"], cfg["app"]["output_file_name"], cfg["app"]["headless"], stripped_search_strings)
